<resources>
    <string name="add_new_device_button">Add new device</string>
    <string name="agree">Agree</string>
    <string name="ambient_temperature_label">Ambient temperature</string>
    <string name="are_you_sure_label">Are you sure?</string>
    <string name="automate_system_message">We make this irrigation plan for the next 7 days.\nIn order to deliver a personalized and responsive service, we can edit the plan, according to weather forecast changes over the days.\nYour sensors will have an important role to improve your experience.</string>
    <string name="automate_system_title">We are happy to take cure of your system!</string>
    <string name="automate_system_toolbar_title">Automate system</string>
    <string name="automated_system_label">System automated</string>
    <string name="automated_system_message_label">Press to disable</string>
    <string name="background_refreshing_label">Background refreshing</string>
    <string name="bluetooth_button">Bluetooth</string>
    <string name="bt_connection_toolbar_title">Bluetooth connection</string>
    <string name="bt_not_supported_dialog_message">Please use WiFi connectivity to connect.</string>
    <string name="bt_not_supported_dialog_title">This device not supports Bluetooth connectivity</string>
    <string name="cancel_button">Cancel</string>
    <string name="cannot_control_irrigation_system_manually_toast">If you want to control manually, turn to manual control system</string>
    <string name="cannot_disable_background_refreshing_toast">Cannot disable background refreshing in automatic mode</string>
    <string name="changes_not_saved_message">If you go back, changes will be lost.</string>
    <string name="changes_not_saved_title">Changes have not yet been saved</string>
    <string name="close_button">Close</string>
    <string name="close_tutorial_button">Close tutorial</string>
    <string name="close_tutorial_dialog_msg">You can repeat it from user profile panel.</string>
    <string name="close_tutorial_dialog_title">Do you want to exit from tutorial?</string>
    <string name="configuration_label">Configuration</string>
    <string name="configuration_not_automated">Automate system</string>
    <string name="configuration_not_automated_message">Try our automatic control</string>
    <string name="configure_label">Configure</string>
    <string name="confirm_button">Confirm</string>
    <string name="connect_to_hub_toolbar_title">Connect to ecoWatering Hub</string>
    <string name="connected_remote_devices_card_tutorial_msg">From here, you can manage connected remote devices, add new and remove them.</string>
    <string name="connection_chooser_fragment_title_device">To connect to your device, you need to receive the request from your EcoWateringHub.\n\nChoose the way you like to receive the request.</string>
    <string name="connection_chooser_fragment_title_hub">Choose the way you like to authorize a remote ecoWatering Device.</string>
    <string name="control_system_manually_dialog_message">All the functionality will turned in manual mode, Make you sure you have all under your control.</string>
    <string name="date_builder_extended_label">%1$s %2$s, %3$d</string>
    <string name="date_builder_label">%1$d/%2$d/%3$d</string>
    <string name="delete_account_button">Delete account</string>
    <string name="delete_account_message">Your data would be destroyed forever.</string>
    <string name="delete_account_title">Do you really want to delete your account?</string>
    <string name="delete_scheduling">Delete scheduling</string>
    <string name="delete_scheduling_title_dialog">Do you want to delete scheduling?</string>
    <string name="detach_button">Detach</string>
    <string name="detach_sensor_dialog_title">Are you sure to detach this sensor?</string>
    <string name="device_account_successful_deleted_title">Account deleted</string>
    <string name="device_id_label">DeviceID:</string>
    <string name="disconnect">Disconnect</string>
    <string name="duration_label">Duration: </string>
    <string name="eco_watering_hub_app_name">ecoWateringHub</string>
    <string name="edit_user_name_content_description">Press to edit your username</string>
    <string name="empty_history">Empty history</string>
    <string name="go_to_settings_button">Go to Settings</string>
    <string name="history_label">History</string>
    <string name="hours_label">Hours</string>
    <string name="http_error_dialog_message">Retry later.</string>
    <string name="http_error_dialog_title">Sorry, something went wrong</string>
    <string name="insert_irr_sys_scheduling_starting_time">Insert the starting time</string>
    <string name="insert_irr_sys_scheduling_stopping_time">Insert the stopping time</string>
    <string name="internet_connection_fault_msg">Make you sure you are connected to Internet and retry.</string>
    <string name="internet_connection_fault_title">Device is not connected to Internet</string>
    <string name="invalid_pasted_time_toast">Warning! insert a valid time</string>
    <string name="irr_sys_already_scheduled_title">Warning! If scheduling is already defined, new scheduling will replace it.</string>
    <string name="irr_sys_stopping_time_title">How long you want to enable it?</string>
    <string name="irr_sys_switch_message">Any scheduling will be canceled</string>
    <string name="irrigation_plan_agree_dialog_message">You can always stop following the plan and keep manual control on the system.</string>
    <string name="irrigation_plan_agree_dialog_title">Do you agree our irrigation plan?</string>
    <string name="irrigation_system_label">Irrigation System</string>
    <string name="irrigation_system_switch_off_dialog">Do you want to switch off the irrigation system?</string>
    <string name="irrigation_system_switch_on_dialog">Do you want to switch on the irrigation system?</string>
    <string name="light_uv_index_max_label">max UV index</string>
    <string name="light_uv_index_label">UV index</string>
    <string name="low_battery_notification">Warning! Low Battery, recharge your device!</string>
    <string name="manage_remote_device_toolbar_title">Connected Devices</string>
    <string name="minutes_label">Minutes</string>
    <string name="name_label">Name</string>
    <string name="next_button">Next</string>
    <string name="next_starting_label">Next starting</string>
    <string name="next_stopping_label">Next stopping</string>
    <string name="new_name_label">New name</string>
    <string name="no_irrigation_needed">No irrigation needed</string>
    <string name="no_sensor_selected_label">No sensor selected</string>
    <string name="not_defined_label">N/D</string>
    <string name="notification_data_object_refreshing_disabled">Background refreshing disabled</string>
    <string name="off_value">Off</string>
    <string name="ok_button">OK</string>
    <string name="on_value">On</string>
    <string name="refresh">Refresh</string>
    <string name="relative_humidity_label">Relative humidity</string>
    <string name="relative_humidity_percent_label">Relative humidity percent</string>
    <string name="relative_humidity_mean_percent_label">Mean relative humidity percent</string>
    <string name="remote_devices_connected_case">Select \"+\" item on the toolbar to add new remote devices..</string>
    <string name="remote_device_connection_toolbar_title">Add new device</string>
    <string name="remove_remote_device_confirm_title">Do you want to remove this device?</string>
    <string name="remove_remote_device_confirm_message">You can never manage this Hub from this device</string>
    <string name="remove_remote_device_successfully_title">Device removed successfully!</string>
    <string name="remove_remote_device_title_empty_case">No remote device connected</string>
    <string name="repeat_tutorial_button">Repeat tutorial</string>
    <string name="repeat_tutorial_dialog_msg">Remember! Tutorial will be available only for not automated hub.</string>
    <string name="repeat_tutorial_dialog_title">Do you want to repeat the tutorial?</string>
    <string name="retry_button">Retry</string>
    <string name="precipitation_label">Precipitation</string>
    <string name="precipitation_label_chance_light_precipitation">Slight chance of light rain</string>
    <string name="precipitation_label_heavy_precipitation">Heavy rain expected</string>
    <string name="precipitation_label_intense_precipitation">Intense rainfall expected</string>
    <string name="precipitation_label_light_precipitation">Light rain expected</string>
    <string name="precipitation_label_moderate_precipitation">Moderate rain expected</string>
    <string name="precipitation_label_no_precipitation">No precipitation expected</string>
    <string name="precipitation_measurement_unit">mm</string>
    <string name="schedule_label">Schedule</string>
    <string name="scheduling_label">Scheduling</string>
    <string name="selected_sensor_label">Selected sensor</string>
    <string name="sensor_added_successfully">Sensor is successfully configured</string>
    <string name="sensor_already_configured">This sensor is already configured.</string>
    <string name="sensor_ambient_temperature">Ambient temperature sensor</string>
    <string name="sensor_chosen_title_dialog">Do you want to use this sensor?</string>
    <string name="sensor_detached_title">Sensor successfully detached</string>
    <string name="sensors_notification_text">Last update: </string>
    <string name="sensor_light">Light sensor</string>
    <string name="sensor_list_empty">Sorry, no sensor founded.\nPlease, make you sure sensors are correctly connected to the ecoWateringHub and retry.</string>
    <string name="sensor_not_configured_info">If there are not configured sensors, ecoWatering will use Open-Meteo.com information. Configure your sensors for a better performing.</string>
    <string name="sensor_relative_humidity">Relative humidity sensor</string>
    <string name="sensors_configuration_title">Choose the %s sensor you want to use.</string>
    <string name="sensors_label">Sensors</string>
    <string name="setting_button">Setting</string>
    <string name="show_automated_irrigation_system_info">show automated irrigation system info</string>
    <string name="show_scheduling_label">Show scheduling</string>
    <string name="start_label">Start: </string>
    <string name="starting_label">Starting…</string>
    <string name="state_label">State :</string>
    <string name="system_automated_label">System automated</string>
    <string name="temperature_celsius">O Celsius</string>
    <string name="today_label">Today</string>
    <string name="user_must_enable_wifi_message">Enable WiFi or go to Setting.</string>
    <string name="user_must_enable_wifi_title">To connect, you need to enable WiFi.</string>
    <string name="user_profile_menu_item_label">Manage profile</string>
    <string name="warning_label">Warning!</string>
    <string name="watering_minutes_estimated_today_label">Estimated watering minutes today: </string>
    <string name="watering_minutes_executed_label">Executed watering minutes: </string>
    <string name="watering_minutes_saved_label">Saved watering minutes</string>
    <string name="watering_minutes_saved_total_value_label">Total saved watering minutes: </string>
    <string name="weather_info_card_tutorial_msg">This is the WeatherCard, you can see main information about forecast weather and using sensors</string>
    <string name="why_use_location_address_dialog_post_never_show_message">Go to Setting->privacy->Manage permissions and allow the app to know your location manually.</string>
    <string name="why_use_location_address_dialog_post_never_show_title">You have to allow the app, to know your location</string>
    <string name="why_use_location_dialog_message">We will use your location just to connect your device with an other one.</string>
</resources>