<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tutorialHelperView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="440dp"
    android:padding="15dp"
    android:background="@drawable/rounded_square_shape"
    android:backgroundTint="@color/ew_secondary_color_90"
    android:scaleX="0.9"
    android:scaleY="0.9"
    android:elevation="64dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">
    <TextView
        android:id="@+id/viewLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/weather_info_card_tutorial_msg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/closeTutorialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/ew_secondary_color"
        android:text="@string/close_tutorial_button"
        android:textColor="@color/black_white_100"
        app:layout_constraintTop_toBottomOf="@+id/viewLabelTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/nextTutorialButton"/>
    <Button
        android:id="@+id/nextTutorialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/next_button"
        android:textColor="@color/black_white_100"
        app:layout_constraintTop_toBottomOf="@+id/viewLabelTextView"
        app:layout_constraintLeft_toRightOf="@+id/closeTutorialButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>