<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TOOLBAR -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/toolbarTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/automate_system_toolbar_title"
                android:textAppearance="@style/toolBarTitleStyle"/>
        </androidx.appcompat.widget.Toolbar>

        <!-- FRAGMENT -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainFragmentLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/fragmentTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/automate_system_title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/fragmentMessageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/automate_system_message"
                android:textAlignment="center"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/fragmentTitleTextView"/>
            <HorizontalScrollView
                android:id="@+id/irrigationPlanScrollView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="-30dp"
                android:layout_marginStart="-260dp"
                android:layout_marginEnd="-260dp"
                android:scrollbars="none"
                android:divider="@android:color/transparent"
                app:layout_constraintTop_toBottomOf="@+id/fragmentMessageTextView"
                app:layout_constraintBottom_toTopOf="@+id/automateSystemAgreeButton">
                <LinearLayout
                    android:id="@+id/scrollViewInnerLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:scaleY="0.8"
                    android:scaleX="0.8"
                    android:orientation="horizontal"/>
            </HorizontalScrollView>
            <Button
                android:id="@+id/automateSystemAgreeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/agree"
                android:textColor="@color/black_white_100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- LOADING FRAGMENT INCLUDE -->
        <include
            android:id="@+id/includeLoadingFragment"
            layout="@layout/fragment_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>