<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:background="@drawable/rounded_square_shape"
    android:scaleX="0.85"
    android:scaleY="0.85"
    android:elevation="1dp"
    app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:id="@+id/titleIrrigationSystemCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_square_shape"
        android:elevation="2dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:scaleY="1.25"
            android:scaleX="1.25"
            android:background="@drawable/irrigation_system_icon"
            android:backgroundTint="@color/black_white_100"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/irrigation_system_label"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/black_white_100"/>
    </LinearLayout>
    <TextView
        android:id="@+id/irrigationSystemStateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/state_label"
        android:textSize="18sp"
        android:textAlignment="gravity"
        android:gravity="end"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintTop_toBottomOf="@+id/titleIrrigationSystemCard"
        app:layout_constraintRight_toLeftOf="@+id/irrigationSystemValueStateTextView"/>
    <TextView
        android:id="@+id/irrigationSystemValueStateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:text="@string/off_value"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="gravity"
        android:gravity="start"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintTop_toBottomOf="@+id/titleIrrigationSystemCard"
        app:layout_constraintLeft_toRightOf="@+id/irrigationSystemStateTextView"/>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/irrigationSystemStateSwitchCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:scaleY="2"
        android:scaleX="2"
        app:layout_constraintTop_toBottomOf="@+id/irrigationSystemValueStateTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>