<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TOOLBAR -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/ew_primary_color"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/toolbarTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_menu_item_label"
            android:textColor="@color/white"
            android:textAppearance="@style/toolBarTitleStyle"/>
    </androidx.appcompat.widget.Toolbar>

    <!-- FRAGMENT -->
    <ScrollView
        android:id="@+id/mainFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
            <!-- USER NAME CARD -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/userNameCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_square_shape"
                android:scaleX="0.85"
                android:scaleY="0.85"
                android:elevation="1dp"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/userNameTextViewContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    app:layout_constraintWidth_percent="0.7"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent">
                    <TextView
                        android:id="@+id/userNameLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_label"
                        android:textSize="24sp"
                        android:textColor="@color/classic_hint"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"/>
                    <EditText
                        android:id="@+id/userNameEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textSize="33sp"
                        app:layout_constraintTop_toBottomOf="@+id/userNameLabelTextView"
                        app:layout_constraintLeft_toLeftOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/enableEditUserNameButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="?attr/actionBarSize"
                    android:minHeight="?attr/actionBarSize"
                    android:background="@drawable/rounded_square_shape"
                    android:backgroundTint="@color/ew_secondary_color"
                    android:elevation="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintTop_toTopOf="@+id/userNameTextViewContainer"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/userNameTextViewContainer"
                    app:layout_constraintRight_toRightOf="parent">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/edit_icon"
                        android:backgroundTint="@color/white"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!-- EDIT USER NAME BUTTONS -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/editUserNameButtonsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/userNameCard"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <Button
                    android:id="@+id/editUserNameCancelButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_button"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/ew_secondary_color_30"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/editUserNameConfirmButton"/>
                <Button
                    android:id="@+id/editUserNameConfirmButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_button"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/ew_primary_color"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/editUserNameCancelButton"
                    app:layout_constraintRight_toRightOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- DELETE ACCOUNT BUTTON -->
            <Button
                android:id="@+id/deleteAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/delete_account_button"
                android:backgroundTint="@color/ew_secondary_color_30"
                app:layout_constraintTop_toBottomOf="@+id/editUserNameButtonsContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- LOADING FRAGMENT -->
    <include
        android:id="@+id/includeLoadingFragment"
        layout="@layout/fragment_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>